--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ select = "0.5.0"
 urlencoding = "2.1.0"
 serde_json = "1.0"
 serde = {version="1.0.131", features=["derive"]}
-eframe = "*"
+eframe = { git = "https://github.com/emilk/egui", branch = "master" ,features=["default_fonts","egui_glow"]}
 rusqlite = "0.26.3"
