--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde_json = "1.0"
 serde = {version="1.0.131", features=["derive"]}
 eframe = { git = "https://github.com/emilk/egui", branch = "master" ,features=["default_fonts","egui_glow"]}
 rusqlite = "0.26.3"
+regex = "*"
